# JetBrainsBlogTask

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  endpoints.rs  main.rs
